3. verzio: Táblázat szerkesztés és törlés, HTML5 SVG és Web Storage

--- a/table.html
+++ b/table.html
@@ -45,6 +45,7 @@
                         <th>Életkor</th>
                         <th>Város</th>
                         <th>Foglalkozás</th>
+                        <th>Műveletek</th>
                     </tr>
                 </thead>
                 <tbody id="dataTableBody">
@@ -53,24 +54,40 @@
                         <td>15</td>
                         <td>Budapest</td>
                         <td>Tanuló</td>
+                        <td>
+                            <button class="edit-btn">Szerkeszt</button>
+                            <button class="delete-btn">Töröl</button>
+                        </td>
                     </tr>
                     <tr>
                         <td>Anna</td>
                         <td>22</td>
                         <td>Debrecen</td>
                         <td>Egyetemi hallgató</td>
+                        <td>
+                            <button class="edit-btn">Szerkeszt</button>
+                            <button class="delete-btn">Töröl</button>
+                        </td>
                     </tr>
                     <tr>
                         <td>Péter</td>
                         <td>30</td>
                         <td>Szeged</td>
                         <td>Programozó</td>
+                        <td>
+                            <button class="edit-btn">Szerkeszt</button>
+                            <button class="delete-btn">Töröl</button>
+                        </td>
                     </tr>
                     <tr>
                         <td>Eszter</td>
                         <td>28</td>
                         <td>Pécs</td>
                         <td>Marketinges</td>
+                        <td>
+                            <button class="edit-btn">Szerkeszt</button>
+                            <button class="delete-btn">Töröl</button>
+                        </td>
                     </tr>
                 </tbody>
             </table>
