--- a/react.html
+++ b/react.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChartJS - Web-programozás 1</title>
+    <title>React - Web-programozás 1</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="chart.js" defer></script>
 </head>
 <body>
     <header>
@@ -17,23 +15,22 @@
             <li><a href="index.html">Kezdőlap</a></li>
             <li><a href="table.html">Táblázat</a></li>
             <li><a href="html5.html">HTML5</a></li>
-            <li><a href="chart.html" class="active">ChartJS</a></li>
+            <li><a href="chart.html">ChartJS</a></li>
             <li><a href="ajax.html">AJAX</a></li>
             <li><a href="oojs.html">OOJS</a></li>
-            <li><a href="react.html">React</a></li>
+            <li><a href="react.html" class="active">React</a></li>
         </ul>
     </nav>
-    <main>
-        <aside>
-            <h2>Információ</h2>
-            <p>ChartJS diagramok bemutatása.</p>
-        </aside>
-        <div class="content">
-            <h2>ChartJS Példa</h2>
-            <h3>Diagram</h3>
-            <canvas id="myChart" width="400" height="200"></canvas>
+    <aside>
+        <h2>Információ</h2>
+        <p>React egyoldalas alkalmazás két menüvel.</p>
+    </aside>
+    <div class="content">
+        <h2>React Példa</h2>
+        <div id="root">
+            <p>Itt lesz a React alkalmazás...</p>
         </div>
-    </main>
+    </div>
     <footer>
         <p>Készítette: Szűcs Ádám (FYOVDT)</p>
     </footer>
