--- a/oojs.html
+++ b/oojs.html
@@ -29,7 +29,7 @@
         </aside>
         <div class="content">
             <h2>OOJS Példa - Alkalmazottak</h2>
-            <p>Új alkalmazott hozzáadása és megjelenítése.</p>
+            <p>Kattints a gombokra az alkalmazottak fizetésének módosításához vagy törléséhez!</p>
             <div class="add-employee-form">
                 <h3>Új alkalmazott hozzáadása</h3>
                 <label for="newName">Név:</label>
