--- a/react.html
+++ b/react.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React - Web-programozás 1</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="react/static/css/main.2da282ba.css">
+    <link rel="icon" href="react/favicon.ico">
 </head>
 <body>
     <header>
@@ -21,18 +23,19 @@
             <li><a href="react.html" class="active">React</a></li>
         </ul>
     </nav>
-    <aside>
-        <h2>Információ</h2>
-        <p>React egyoldalas alkalmazás két menüvel.</p>
-    </aside>
-    <div class="content">
-        <h2>React Példa</h2>
-        <div id="root">
-            <p>Itt lesz a React alkalmazás...</p>
+    <main>
+        <aside>
+            <h2>Információ</h2>
+            <p>React egyoldalas alkalmazás két menüvel.</p>
+        </aside>
+        <div class="content">
+            <h2>React Példa</h2>
+            <div id="root"></div>
         </div>
-    </div>
+    </main>
     <footer>
         <p>Készítette: Szűcs Ádám (FYOVDT)</p>
     </footer>
+    <script src="react/static/js/main.dd758931.js"></script>
 </body>
 </html>
