--- a/react.html
+++ b/react.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React - Web-programozás 1</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Buildelt CSS fájl betöltése -->
     <link rel="stylesheet" href="react/static/css/main.2da282ba.css">
+    <!-- Favicon hivatkozás -->
     <link rel="icon" href="react/favicon.ico">
 </head>
 <body>
@@ -23,19 +25,18 @@
             <li><a href="react.html" class="active">React</a></li>
         </ul>
     </nav>
-    <main>
-        <aside>
-            <h2>Információ</h2>
-            <p>React egyoldalas alkalmazás két menüvel.</p>
-        </aside>
-        <div class="content">
-            <h2>React Példa</h2>
-            <div id="root"></div>
-        </div>
-    </main>
+    <aside>
+        <h2>Információ</h2>
+        <p>React egyoldalas alkalmazás két menüvel.</p>
+    </aside>
+    <div class="content">
+        <h2>React Példa</h2>
+        <div id="root"></div>
+    </div>
     <footer>
         <p>Készítette: Szűcs Ádám (FYOVDT)</p>
     </footer>
+    <!-- Buildelt JS fájl betöltése -->
     <script src="react/static/js/main.dd758931.js"></script>
 </body>
 </html>
