--- a/oojs.html
+++ b/oojs.html
@@ -22,29 +22,28 @@
             <li><a href="react.html">React</a></li>
         </ul>
     </nav>
-    <main>
-        <aside>
-            <h2>Információ</h2>
-            <p>Objektumorientált JavaScript bemutatása.</p>
-        </aside>
-        <div class="content">
-            <h2>OOJS Példa - Alkalmazottak</h2>
-            <p>Kattints a gombokra az alkalmazottak fizetésének módosításához vagy törléséhez!</p>
-            <div class="add-employee-form">
-                <h3>Új alkalmazott hozzáadása</h3>
-                <label for="newName">Név:</label>
-                <input type="text" id="newName" placeholder="Pl. Kovács Péter"><br>
-                <label for="newAddress">Cím:</label>
-                <input type="text" id="newAddress" placeholder="Pl. Budapest, Fő utca 1"><br>
-                <label for="newSalary">Fizetés (Ft):</label>
-                <input type="number" id="newSalary" placeholder="Pl. 300000"><br>
-                <label for="newDepartment">Csoport:</label>
-                <input type="text" id="newDepartment" placeholder="Pl. IT Osztály"><br>
-                <button onclick="addNewEmployee()">Hozzáadás</button>
-            </div>
-            <div id="employeesContainer"></div>
+    <aside>
+        <h2>Információ</h2>
+        <p>Objektumorientált JavaScript bemutatása.</p>
+    </aside>
+    <div class="content">
+        <h2>OOJS Példa - Alkalmazottak</h2>
+        <p>Kattints a gombokra az alkalmazottak fizetésének módosításához vagy törléséhez!</p>
+        <!-- Űrlap új alkalmazott hozzáadásához -->
+        <div class="add-employee-form">
+            <h3>Új alkalmazott hozzáadása</h3>
+            <label for="newName">Név:</label>
+            <input type="text" id="newName" placeholder="Pl. Kovács Péter"><br>
+            <label for="newAddress">Cím:</label>
+            <input type="text" id="newAddress" placeholder="Pl. Budapest, Fő utca 1"><br>
+            <label for="newSalary">Fizetés (Ft):</label>
+            <input type="number" id="newSalary" placeholder="Pl. 300000"><br>
+            <label for="newDepartment">Csoport:</label>
+            <input type="text" id="newDepartment" placeholder="Pl. IT Osztály"><br>
+            <button onclick="addNewEmployee()">Hozzáadás</button>
         </div>
-    </main>
+        <div id="employeesContainer"></div>
+    </div>
     <footer>
         <p>Készítette: Szűcs Ádám (FYOVDT)</p>
     </footer>
